@@ -1,10 +1,14 @@
 package org.specs.MicroBlaze.test.detection;
 
 import java.util.Arrays;
+import java.util.List;
 
 import org.junit.Test;
 import org.specs.MicroBlaze.provider.MicroBlazeELFProvider;
 import org.specs.MicroBlaze.provider.MicroBlazeLivermoreN10;
+import org.specs.MicroBlaze.provider.MicroBlazeLivermoreN100;
+import org.specs.MicroBlaze.provider.MicroBlazeTraceDumpProvider;
+import org.specs.MicroBlaze.stream.MicroBlazeTraceStream;
 
 import pt.up.fe.specs.binarytranslation.detection.detectors.DetectorConfiguration.DetectorConfigurationBuilder;
 import pt.up.fe.specs.binarytranslation.detection.detectors.fixed.FixedSizeMegablockDetector;
@@ -14,13 +18,14 @@ public class MicroBlazeSequentialDetectTest {
     private void testSequentialDetectors(MicroBlazeELFProvider elf) {
 
         // file
-        int minwindow = 10, maxwindow = 10;
+        int minwindow = 36, maxwindow = 36;
 
         // do all detectors sequentially
         for (int i = minwindow; i <= maxwindow; i++) {
 
-            var istream1 = elf.toTraceStream();
-            istream1.silent(false);
+            //var istream1 = elf.toTraceStream();
+            var istream1 = new MicroBlazeTraceStream(new MicroBlazeTraceDumpProvider((MicroBlazeELFProvider) elf));
+            istream1.silent(true);
 
             var startAddr = istream1.getApp().getKernelStart();
             var stopAddr = istream1.getApp().getKernelStop();
@@ -33,7 +38,7 @@ public class MicroBlazeSequentialDetectTest {
                     new DetectorConfigurationBuilder()
                             .withMaxWindow(i)
                             .withStartAddr(startAddr)
-                            .withStopAddr(stopAddr)
+                            //.withStopAddr(stopAddr)
                             .withPrematureStopAddr(stopAddr)
                             .build());
             var result1 = detector1.detectSegments(istream1);
@@ -46,7 +51,8 @@ public class MicroBlazeSequentialDetectTest {
 
     @Test
     public void testSequentialDetectors() {
-        for (var file : Arrays.asList(MicroBlazeLivermoreN10.pic2d)) {
+        for (var file : List.of(MicroBlazeLivermoreN100.cholesky)) {
+            System.out.println(file.getELFName());
             this.testSequentialDetectors(file);
         }
     }
